# fast-dqn-caffe

./: .gitignore  CMakeLists.txt  README.md  install.sh
cmake/Modules/: FindMINECRAFT.cmake
models/: fast_dqn.prototxt  fast_dqn_3conv.prototxt  fast_dqn_recurrent_v1.prototxt  fast_dqn_solver.prototxt  fast_dqn_solver_recurrent_v1.prototxt
patches/: grayscale.patch  sdl.patch
scripts/: plot.py  save_test.sh  visualize.ipynb
src/: ale_environment.cpp  environment.h  fast_dqn.cpp  fast_dqn.h  fast_dqn_main.cpp  minecraft_environment.cpp
tests/: descriptions.txt
tests/extra_ip_layer/: extra_ip.txt  fast_dqn.prototxt  training_log.csv
tests/original/: training_log.csv
tests/walkway_original/: training_log.csv
tests/walkway_original2/: training_log.csv
tests/walkway_original3_fixedz/: fast_dqn.prototxt  training_log.csv
tests/walkway_original4_3acts/: training_log.csv
tests/walkway_original_live_input_fixed_update/: fast_dqn_solver.prototxt  training_log.csv
tests/walkway_original_live_input_fixed_update_full_acts/: training_log.csv
tests/walkway_original_live_input_fixed_update_full_acts_100length/: fast_dqn_solver.prototxt  training_log.csv
tests/walkway_original_live_input_immediate_act/: training_log.csv
tests/walkway_original_static_input/: training_log.csv
tests/walkway_original_static_input_immediate_act/: fast_dqn.prototxt  training_log.csv
tests/walkway_original_winding_acts7_length10/: training_log.csv
